add_executable(test_dense_gaec test_dense_gaec.cpp)
target_link_libraries(test_dense_gaec PRIVATE dense-multicut faiss dense_gaec dense_gaec_parallel dense_gaec_adj_matrix)

add_executable(test_feature_index test_feature_index.cpp)
target_link_libraries(test_feature_index PRIVATE dense-multicut faiss feature_index)
